mbtiles/tests/snapshots/copy__databases@norm__dif.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"B86122579EDCDD4C51F3910894FCC1A1\"  )"
    - "(  \"agg_tiles_hash_after_apply\", \"3BCDEE3F52407FF1315629298CB99133\"  )"
    - "(  \"agg_tiles_hash_before_apply\", \"9ED9178D7025276336C783C2B54D6258\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v2\"  )"
    - "(  \"md-new\", \"value - new\"  )"
    - "(  \"md-remove\", NULL  )"
- type: table
  tbl_name: tiles_data
  sql: "CREATE TABLE tiles_data (\n    tile_data_id INTEGER PRIMARY KEY,\n    tile_data BLOB\n)"
  values:
    - "(  1, NULL  )"
    - "(  2, blob(edit-v2a)  )"
    - "(  3, blob(new)  )"
    - "(  4, blob(not-empty)  )"
    - "(  5, blob()  )"
    - "(  6, blob(edit-v2)  )"
- type: table
  tbl_name: tiles_shallow
  sql: "CREATE TABLE tiles_shallow (\n    zoom_level INTEGER,\n    tile_column INTEGER,\n    tile_row INTEGER,\n    tile_data_id INTEGER,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n) WITHOUT ROWID"
  values:
    - "(  5, 1, 1, 6  )"
    - "(  5, 1, 2, 4  )"
    - "(  5, 1, 3, 5  )"
    - "(  5, 2, 2, 1  )"
    - "(  5, 2, 3, 1  )"
    - "(  5, 3, 7, 3  )"
    - "(  5, 3, 8, 3  )"
    - "(  6, 1, 4, 2  )"
    - "(  6, 2, 6, 1  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    tiles_shallow.zoom_level,\n    tiles_shallow.tile_column,\n    tiles_shallow.tile_row,\n    tiles_data.tile_data\nFROM tiles_shallow\nINNER JOIN tiles_data ON tiles_shallow.tile_data_id = tiles_data.tile_data_id"
  values: ~
