mbtiles/tests/snapshots/copy__databases@norm__v2.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"3BCDEE3F52407FF1315629298CB99133\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v2\"  )"
    - "(  \"md-new\", \"value - new\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tiles_data
  sql: "CREATE TABLE tiles_data (\n    tile_data_id INTEGER PRIMARY KEY,\n    tile_data BLOB\n)"
  values:
    - "(  1, blob(edit-v2a)  )"
    - "(  2, blob(new)  )"
    - "(  3, blob(same)  )"
    - "(  4, blob(1-keep-1-rm)  )"
    - "(  5, blob(root)  )"
    - "(  6, blob(not-empty)  )"
    - "(  7, blob()  )"
    - "(  8, blob(edit-v2)  )"
- type: table
  tbl_name: tiles_shallow
  sql: "CREATE TABLE tiles_shallow (\n    zoom_level INTEGER,\n    tile_column INTEGER,\n    tile_row INTEGER,\n    tile_data_id INTEGER,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n) WITHOUT ROWID"
  values:
    - "(  3, 6, 7, 5  )"
    - "(  5, 0, 0, 3  )"
    - "(  5, 0, 1, 7  )"
    - "(  5, 1, 1, 8  )"
    - "(  5, 1, 2, 6  )"
    - "(  5, 1, 3, 7  )"
    - "(  5, 3, 7, 2  )"
    - "(  5, 3, 8, 2  )"
    - "(  6, 0, 3, 3  )"
    - "(  6, 0, 5, 4  )"
    - "(  6, 1, 4, 1  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    tiles_shallow.zoom_level,\n    tiles_shallow.tile_column,\n    tiles_shallow.tile_row,\n    tiles_data.tile_data\nFROM tiles_shallow\nINNER JOIN tiles_data ON tiles_shallow.tile_data_id = tiles_data.tile_data_id"
  values: ~
