mbtiles/tests/snapshots/copy__databases@norm__v2z.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"A18D0C39730FB52E5A547F096F5C60E8\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v2\"  )"
    - "(  \"md-new\", \"value - new\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tiles_data
  sql: "CREATE TABLE tiles_data (\n    tile_data_id INTEGER PRIMARY KEY,\n    tile_data BLOB\n)"
  values:
    - "(  1, blob(1F8B08000000000000FF2BCACF2F01005BF9F41604000000)  )"
    - "(  2, blob(1F8B08000000000000FF03000000000000000000)  )"
    - "(  3, blob(1F8B08000000000000FF4B4DC92CD12D330200C489DF2607000000)  )"
    - "(  4, blob(1F8B08000000000000FF33D4CD4E4D2DD035D42DCA050026D508C30B000000)  )"
    - "(  5, blob(1F8B08000000000000FF4B4DC92CD12D334A04006367987408000000)  )"
    - "(  6, blob(1F8B08000000000000FFCBCB2FD14DCD2D28A9040086D4937609000000)  )"
    - "(  7, blob(1F8B08000000000000FF2B4ECC4D050044F150FC04000000)  )"
    - "(  8, blob(1F8B08000000000000FFCB4B2D07004544E36B03000000)  )"
- type: table
  tbl_name: tiles_shallow
  sql: "CREATE TABLE tiles_shallow (\n    zoom_level INTEGER,\n    tile_column INTEGER,\n    tile_row INTEGER,\n    tile_data_id INTEGER,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n) WITHOUT ROWID"
  values:
    - "(  3, 6, 7, 1  )"
    - "(  5, 0, 0, 7  )"
    - "(  5, 0, 1, 2  )"
    - "(  5, 1, 1, 3  )"
    - "(  5, 1, 2, 6  )"
    - "(  5, 1, 3, 2  )"
    - "(  5, 3, 7, 8  )"
    - "(  5, 3, 8, 8  )"
    - "(  6, 0, 3, 7  )"
    - "(  6, 0, 5, 4  )"
    - "(  6, 1, 4, 5  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    tiles_shallow.zoom_level,\n    tiles_shallow.tile_column,\n    tiles_shallow.tile_row,\n    tiles_data.tile_data\nFROM tiles_shallow\nINNER JOIN tiles_data ON tiles_shallow.tile_data_id = tiles_data.tile_data_id"
  values: ~
